--- a/src/index.html
+++ b/src/index.html
@@ -31,5 +31,6 @@
 <body class="dark-theme">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
+  <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "53f01b997f244b59b6271a8409b43f0f"}'></script>
 </body>
 </html>
