Use static subdomain for assets

--- a/src/index.html
+++ b/src/index.html
@@ -5,25 +5,25 @@
   <title>Foxy-Pool</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="assets/favicon.ico">
-  <link rel="icon" sizes="16x16 32x32 64x64" href="assets/favicon.ico">
-  <link rel="icon" type="image/png" sizes="196x196" href="assets/favicon-192.png">
-  <link rel="icon" type="image/png" sizes="160x160" href="assets/favicon-160.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="assets/favicon-96.png">
-  <link rel="icon" type="image/png" sizes="64x64" href="assets/favicon-64.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png">
-  <link rel="apple-touch-icon" href="assets/favicon-57.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="assets/favicon-114.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="assets/favicon-72.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="assets/favicon-144.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon-60.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="assets/favicon-120.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="assets/favicon-76.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="assets/favicon-152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-180.png">
+  <link rel="shortcut icon" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon.ico">
+  <link rel="icon" sizes="16x16 32x32 64x64" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon.ico">
+  <link rel="icon" type="image/png" sizes="196x196" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-192.png">
+  <link rel="icon" type="image/png" sizes="160x160" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-160.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-96.png">
+  <link rel="icon" type="image/png" sizes="64x64" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-64.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-16.png">
+  <link rel="apple-touch-icon" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-57.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-114.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-72.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-144.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-60.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-120.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-76.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-180.png">
   <meta name="msapplication-TileColor" content="#FFFFFF">
-  <meta name="msapplication-TileImage" content="assets/favicon-144.png">
+  <meta name="msapplication-TileImage" content="https://static.foxypool.io/assets/icon/fox/favicon/favicon-144.png">
   <meta name="msapplication-config" content="assets/browserconfig.xml">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
@@ -31,7 +31,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Foxy-Pool OG">
   <meta property="og:description" content="Easily farm CHIA, CHIVES, HDDCOIN and FLAX with your OG plots. Low fees and hosted in Europe.">
-  <meta property="og:image" content="https://raw.githubusercontent.com/foxypool/chia-og-pool-ui/master/src/assets/icons/icon-384x384.png">
+  <meta property="og:image" content="https://static.foxypool.io/assets/icon/fox/icon-384x384.png">
 </head>
 <body class="dark-theme">
   <app-root></app-root>
