--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   <meta property="og:description" content="Easily farm CHIA with your OG & NFT plots. Low fees and hosted in Europe. Supports compressed plots with BladeBit and Gigahorse.">
   <meta property="og:image" content="https://static.foxypool.io/assets/icon/fox/icon-384x384.png">
 </head>
-<body class="dark-theme">
+<body class="dark-theme" data-bs-theme="dark">
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
