Update meta description

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Foxy-Pool">
-  <meta property="og:description" content="Easily farm CHIA with your OG & NFT plots. Low fees and hosted in Europe. Supports compressed plots with BladeBit and Gigahorse.">
+  <meta property="og:description" content="Easily farm CHIA with your OG & NFT plots. Low fees and hosted in Europe. Supports compressed plots with BladeBit, Gigahorse and DrPlotter.">
   <meta property="og:image" content="https://static.foxypool.io/assets/icon/fox/icon-384x384.png">
 </head>
 <body class="dark-theme" data-bs-theme="dark">
