Add rewards tab

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <title>Foxy-Pool</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="preconnect" href="https://static.foxypool.io">
   <link rel="shortcut icon" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon.ico">
   <link rel="icon" sizes="16x16 32x32 64x64" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon.ico">
   <link rel="icon" type="image/png" sizes="196x196" href="https://static.foxypool.io/assets/icon/fox/favicon/favicon-192.png">
